--- a/祝福.html
+++ b/祝福.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    阿帅祝大家将来都是CEO,加油鸭。
-	石俊雨：祝大家事业有成
+    阿帅祝大家将来都是CEO,加油鸭。<br>
+	石俊雨：祝大家事业有成<br>
 </body>
 </html>
